--- a/src/components/TaskApp/TaskApp.css
+++ b/src/components/TaskApp/TaskApp.css
@@ -90,9 +90,53 @@
     transform: scale(1.1);
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
 }
+
 .filter_label {
     color: white
 }
+
 .filter_label:hover {
     color: greenyellow;
+}
+
+.taskapp_input {
+    padding: 0.6rem 1rem;
+    font-size: 1rem;
+    border: 1px solid #444;
+    border-radius: 8px;
+    background-color: #1e1e1e;
+    color: #f0f0f0;
+    outline: none;
+    transition: all 0.3s ease;
+    width: 250px;
+}
+
+.taskapp_input::placeholder {
+    color: #888;
+}
+
+.taskapp_input:focus {
+    border-color: #00bfff;
+    box-shadow: 0 0 5px rgba(0, 191, 255, 0.5);
+    background-color: #262626;
+}
+
+.no_result {
+    margin-top: 3rem;
+    font-size: 3.2rem;
+    color: #999;
+    text-align: center;
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(5px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
