--- a/src/components/TaskList/taskList.css
+++ b/src/components/TaskList/taskList.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 6rem;
     padding: 2rem 0;
+    align-items: flex-start;
 }
 
 .project_card {
@@ -16,7 +17,7 @@
     gap: 0.5rem;
     cursor: pointer;
     position: relative;
-    width: 300px;
+    height: auto;
 }
 
 .project_card:hover {
@@ -332,6 +333,10 @@
     margin-left: 6px;
 }
 
+.crud_buttons {
+    padding-top: 20px;
+    box-sizing: border-box;
+}
 
 @keyframes spin {
     to {
